Add GetLibrary
